Apply suggestions from code review
Co-authored-by: Alexander Goscinski <alex.goscinski@posteo.de>

--- a/tests/cases/parameters/config/config.yml
+++ b/tests/cases/parameters/config/config.yml
@@ -56,7 +56,7 @@ cycles:
 tasks:
   - icon:
       plugin: shell
-      # PRCOMMENT
+      # FIXME
       # Relative path -> except if this cannot be resolved to a registered code
       # Probably either enforce absolute path, or provide a code argument
       # See: https://github.com/C2SM/Sirocco/pull/153
