--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,7 @@ Changelog = "https://github.com/C2SM/Sirocco/blob/main/CHANGELOG.md"
 
 [tool.pytest.ini_options]
 # Configuration for [pytest](https://docs.pytest.org)
-addopts = "-s --pdbcls=IPython.terminal.debugger:TerminalPdb"
+addopts = "--pdbcls=IPython.terminal.debugger:TerminalPdb"
 norecursedirs = "tests/cases"
 markers = [
   "slow: slow integration tests which are not recommended to run locally for normal development",
@@ -67,7 +67,7 @@ filterwarnings = [
 source = ["sirocco"]
 
 [tool.ruff]
-include = ["src/*py", "tests/*py"]  # PRCOMMENT: Do we want to run Ruff via CI on our test files??
+include = ["src/*py", "tests/*py"] 
 target-version = "py310"
 
 [tool.ruff.lint]
@@ -77,13 +77,6 @@ ignore = [
 ]
 
 [tool.ruff.lint.per-file-ignores]
-"tests/*py" = [
-    "SLF001",  # Private member accessed
-    "S101",    # Use of assert detected
-    "T201",    # `print` found
-    "PLR2004", # Magic value used in comparison
-]
-
 ## Hatch configurations
 
 [tool.hatch.build.targets.sdist]
@@ -159,8 +152,4 @@ ignore_missing_imports = true
 
 [[tool.mypy.overrides]]
 module = ["aiida_workgraph.sockets.builtins"]
-ignore_missing_imports = true
-
-[[tool.mypy.overrides]]
-module = ["termcolor._types"]
 ignore_missing_imports = true
