Revert "clean pyproject.toml"
This reverts commit 64dda116af046143e8e4645e92e124f2d56e109a.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,7 +67,7 @@ filterwarnings = [
 source = ["sirocco"]
 
 [tool.ruff]
-include = ["src/*py", "tests/*py"]
+include = ["src/*py", "tests/*py"] 
 target-version = "py310"
 
 [tool.ruff.lint]
@@ -76,6 +76,7 @@ ignore = [
   "TRY003", # write custom error messages for formatting
 ]
 
+[tool.ruff.lint.per-file-ignores]
 ## Hatch configurations
 
 [tool.hatch.build.targets.sdist]
