--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,7 +66,7 @@ filterwarnings = [
 source = ["sirocco"]
 
 [tool.ruff]
-include = ["src/*py", "tests/*py"] 
+include = ["src/*py", "tests/*py"]
 target-version = "py310"
 
 [tool.ruff.lint]
@@ -76,6 +76,7 @@ ignore = [
 ]
 
 ## Hatch configurations
+[tool.ruff.lint.per-file-ignores]
 
 [tool.hatch.build.targets.sdist]
 include = [
