Set default env python to 3.12 (#174)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -89,6 +89,7 @@ path = "src/sirocco/__init__.py"
 
 [tool.hatch.envs.default]
 installer = "uv"
+python = "3.12"
 
 [tool.hatch.envs.hatch-test]
 installer = "uv"
