Rename `IconTask.src` to `IconTask.bin` (#173)
Since ShellTask.src is enforced to be relative by PR #172 while IconTask.src to
be absolute, the field is renamed to IconTask.bin to better distinguish it.

--- a/tests/cases/large/config/config.yml
+++ b/tests/cases/large/config/config.yml
@@ -118,7 +118,7 @@ tasks:
   - icon:
       plugin: icon
       computer: localhost
-      src: $TEST_ROOTDIR/tests/cases/large/config/ICON/bin/icon
+      bin: $TEST_ROOTDIR/tests/cases/large/config/ICON/bin/icon
       nodes: 40
       walltime: 23:59:59
       namelists:
