--- a/tests/cases/large/config/config.yml
+++ b/tests/cases/large/config/config.yml
@@ -97,7 +97,7 @@ tasks:
   - extpar:
       plugin: shell  # no extpar plugin available yet
       computer: localhost
-      src: scripts/extpar
+      src: /TESTS_ROOTDIR/tests/cases/large/config/scripts/extpar
       command: "extpar --verbose --input {PORT::obs}"
       uenv:
         squashfs: path/to/squashfs
@@ -107,7 +107,7 @@ tasks:
   - preproc:
       plugin: shell
       computer: localhost
-      src: $TEST_ROOTDIR/tests/cases/large/config/scripts/cleanup.sh
+      src: /TESTS_ROOTDIR/tests/cases/large/config/scripts/cleanup.sh
       command: "cleanup.sh -p {PORT::extpar} -e {PORT::era} {PORT::grid}"
       env_source_files: data/dummy_source_file.sh
       nodes: 4
@@ -118,7 +118,7 @@ tasks:
   - icon:
       plugin: icon
       computer: localhost
-      bin: $TEST_ROOTDIR/tests/cases/large/config/ICON/bin/icon
+      bin: /TESTS_ROOTDIR/tests/cases/large/config/ICON/bin/icon
       nodes: 40
       walltime: 23:59:59
       namelists:
@@ -136,7 +136,7 @@ tasks:
   - postproc_1:
       plugin: shell
       computer: localhost
-      src: $TEST_ROOTDIR/tests/cases/large/config/scripts/main_script_ocn.sh
+      src: /TESTS_ROOTDIR/tests/cases/large/config/scripts/main_script_ocn.sh
       command: "main_script_ocn.sh {PORT::None}"
       nodes: 2
       walltime: 00:05:00
@@ -146,7 +146,7 @@ tasks:
   - postproc_2:
       plugin: shell
       computer: localhost
-      src: $TEST_ROOTDIR/tests/cases/large/config/scripts/scripts/main_script_atm.sh
+      src: /TESTS_ROOTDIR/tests/cases/large/config/scripts/scripts/main_script_atm.sh
       command: "main_script_atm.sh --input {PORT::streams}"
       multi_arg_sep: ","
       nodes: 2
@@ -157,14 +157,14 @@ tasks:
   - store_and_clean_1:
       plugin: shell
       computer: localhost
-      src: $TEST_ROOTDIR/tests/cases/large/config/scripts/scripts/post_clean.sh
+      src: /TESTS_ROOTDIR/tests/cases/large/config/scripts/scripts/post_clean.sh
       command: "post_clean.sh {PORT::postout} {PORT::streams} {PORT::icon_input}"
       nodes: 1
       walltime: 00:01:00
   - store_and_clean_2:
       plugin: shell
       computer: localhost
-      src: $TEST_ROOTDIR/tests/cases/large/config/scripts/scripts/post_clean.sh
+      src: /TESTS_ROOTDIR/tests/cases/large/config/scripts/scripts/post_clean.sh
       command: "post_clean.sh --archive {PORT::archive} --clean {PORT::clean}"
       nodes: 1
       walltime: 00:01:00
@@ -172,13 +172,13 @@ data:
   available:
     - grid_file:
         computer: localhost
-        src: $TEST_ROOTDIR/tests/cases/large/config/data/grid
+        src: /TESTS_ROOTDIR/tests/cases/large/config/data/grid
     - obs_data:
         computer: localhost
-        src: $TEST_ROOTDIR/tests/cases/large/config/data/obs_data
+        src: /TESTS_ROOTDIR/tests/cases/large/config/data/obs_data
     - ERA5:
         computer: localhost
-        src: $TEST_ROOTDIR/tests/cases/large/config/data/era5
+        src: /TESTS_ROOTDIR/tests/cases/large/config/data/era5
   generated:
     - extpar_file:
         src: output
