--- a/tests/cases/parameters/config/config.yml
+++ b/tests/cases/parameters/config/config.yml
@@ -57,34 +57,34 @@ tasks:
   - icon:
       plugin: shell
       computer: localhost
-      src: $TEST_ROOTDIR/tests/cases/parameters/config/scripts/icon.py
+      src: /TESTS_ROOTDIR/tests/cases/parameters/config/scripts/icon.py
       command: "icon.py --restart {PORT::restart} --init {PORT::init} --forcing {PORT::forcing}"
       parameters: [foo, bar]
   - statistics_foo:
       plugin: shell
       computer: localhost
-      src: $TEST_ROOTDIR/tests/cases/parameters/config/scripts/statistics.py
+      src: /TESTS_ROOTDIR/tests/cases/parameters/config/scripts/statistics.py
       command: "statistics.py {PORT::None}"
       parameters: [bar]
   - statistics_foo_bar:
       plugin: shell
       computer: localhost
-      src: $TEST_ROOTDIR/tests/cases/parameters/config/scripts/statistics.py
+      src: /TESTS_ROOTDIR/tests/cases/parameters/config/scripts/statistics.py
       command: "statistics.py {PORT::None}"
   - merge:
       plugin: shell
       computer: localhost
-      src: $TEST_ROOTDIR/tests/cases/parameters/config/scripts/merge.py
+      src: /TESTS_ROOTDIR/tests/cases/parameters/config/scripts/merge.py
       command: "merge.py {PORT::None}"
 
 data:
   available:
     - initial_conditions:
         computer: localhost
-        src: $TEST_ROOTDIR/tests/cases/parameters/config/data/initial_conditions
+        src: /TESTS_ROOTDIR/tests/cases/parameters/config/data/initial_conditions
     - forcing:
         computer: localhost
-        src: $TEST_ROOTDIR/tests/cases/parameters/config/data/forcing
+        src: /TESTS_ROOTDIR/tests/cases/parameters/config/data/forcing
   generated:
     - icon_output:
         src: icon_output
