--- a/tests/cases/small-icon/config/config.yml
+++ b/tests/cases/small-icon/config/config.yml
@@ -42,36 +42,36 @@ tasks:
   - icon:
       plugin: icon
       computer: localhost
-      bin: $TEST_ROOTDIR/tests/cases/small-icon/config/ICON/bin/icon
+      bin: /TESTS_ROOTDIR/tests/cases/small-icon/config/ICON/bin/icon
       namelists:
         - ./ICON/icon_master.namelist
         - ./ICON/model.namelist
   - cleanup:
       plugin: shell
       computer: localhost
-      src: $TEST_ROOTDIR/tests/cases/small-icon/config/scripts/cleanup.py
+      src: /TESTS_ROOTDIR/tests/cases/small-icon/config/scripts/cleanup.py
       command: "cleanup.py"
 data:
   available:
      - icon_grid_simple:
          type: file
-         src: $TEST_ROOTDIR/tests/cases/small-icon/config/ICON/icon_grid_simple.nc
+         src: /TESTS_ROOTDIR/tests/cases/small-icon/config/ICON/icon_grid_simple.nc
          computer: localhost
      - ecrad_data:
          type: file
-         src: $TEST_ROOTDIR/tests/cases/small-icon/config/ICON/ecrad_data
+         src: /TESTS_ROOTDIR/tests/cases/small-icon/config/ICON/ecrad_data
          computer: localhost
      - ECHAM6_CldOptProps:
          type: file
-         src: $TEST_ROOTDIR/tests/cases/small-icon/config/ICON/ECHAM6_CldOptProps.nc
+         src: /TESTS_ROOTDIR/tests/cases/small-icon/config/ICON/ECHAM6_CldOptProps.nc
          computer: localhost
      - rrtmg_sw:
          type: file
-         src: $TEST_ROOTDIR/tests/cases/small-icon/config/ICON/rrtmg_sw.nc
+         src: /TESTS_ROOTDIR/tests/cases/small-icon/config/ICON/rrtmg_sw.nc
          computer: localhost
      - dmin_wetgrowth_lookup:
          type: file
-         src: $TEST_ROOTDIR/tests/cases/small-icon/config/ICON/dmin_wetgrowth_lookup.nc
+         src: /TESTS_ROOTDIR/tests/cases/small-icon/config/ICON/dmin_wetgrowth_lookup.nc
          computer: localhost
   generated:
      - finish:
