Support copy of local scripts to remote machine (#95)
Support the copy of local scripts to remote machine by adding the script
specified in `src` to the nodes of the `ShellJob`. Because aiida does
not copy the file over preserving the execution permission, we cannot
support a syntax of the form `./icon.py`. Therefore I changed the usage
to the syntax "python icon.py".

--- a/tests/cases/parameters/config/config.yml
+++ b/tests/cases/parameters/config/config.yml
@@ -58,24 +58,24 @@ tasks:
       plugin: shell
       computer: localhost
       src: /TESTS_ROOTDIR/tests/cases/parameters/config/scripts/icon.py
-      command: "icon.py --restart {PORT::restart} --init {PORT::init} --forcing {PORT::forcing}"
+      command: "python icon.py --restart {PORT::restart} --init {PORT::init} --forcing {PORT::forcing}"
       parameters: [foo, bar]
   - statistics_foo:
       plugin: shell
       computer: localhost
       src: /TESTS_ROOTDIR/tests/cases/parameters/config/scripts/statistics.py
-      command: "statistics.py {PORT::None}"
+      command: "python statistics.py {PORT::None}"
       parameters: [bar]
   - statistics_foo_bar:
       plugin: shell
       computer: localhost
       src: /TESTS_ROOTDIR/tests/cases/parameters/config/scripts/statistics.py
-      command: "statistics.py {PORT::None}"
+      command: "python statistics.py {PORT::None}"
   - merge:
       plugin: shell
       computer: localhost
       src: /TESTS_ROOTDIR/tests/cases/parameters/config/scripts/merge.py
-      command: "merge.py {PORT::None}"
+      command: "python merge.py {PORT::None}"
 
 data:
   available:
