--- a/tests/cases/small-shell/config/config.yml
+++ b/tests/cases/small-shell/config/config.yml
@@ -36,13 +36,13 @@ tasks:
       plugin: shell
       computer: localhost
       src: /TESTS_ROOTDIR/tests/cases/small-shell/config/scripts/icon.py
-      command: "icon.py --restart {PORT::restart} --init {PORT::init}"
+      command: "python icon.py --restart {PORT::restart} --init {PORT::init}"
       env_source_files: /TESTS_ROOTDIR/tests/cases/small-shell/config/data/dummy_source_file.sh
   - cleanup:
       plugin: shell
       computer: localhost
       src: /TESTS_ROOTDIR/tests/cases/small-shell/config/scripts/cleanup.py
-      command: "cleanup.py"
+      command: "python cleanup.py"
 data:
   available:
      - icon_namelist:
