--- a/tests/cases/large/config/config.yml
+++ b/tests/cases/large/config/config.yml
@@ -108,7 +108,7 @@ tasks:
       plugin: shell
       computer: localhost
       src: /TESTS_ROOTDIR/tests/cases/large/config/scripts/cleanup.sh
-      command: "cleanup.sh -p {PORT::extpar} -e {PORT::era} {PORT::grid}"
+      command: "bash cleanup.sh -p {PORT::extpar} -e {PORT::era} {PORT::grid}"
       env_source_files: data/dummy_source_file.sh
       nodes: 4
       walltime: 00:02:00
@@ -137,7 +137,7 @@ tasks:
       plugin: shell
       computer: localhost
       src: /TESTS_ROOTDIR/tests/cases/large/config/scripts/main_script_ocn.sh
-      command: "main_script_ocn.sh {PORT::None}"
+      command: "bash main_script_ocn.sh {PORT::None}"
       nodes: 2
       walltime: 00:05:00
       uenv:
@@ -147,7 +147,7 @@ tasks:
       plugin: shell
       computer: localhost
       src: /TESTS_ROOTDIR/tests/cases/large/config/scripts/scripts/main_script_atm.sh
-      command: "main_script_atm.sh --input {PORT::streams}"
+      command: "bash main_script_atm.sh --input {PORT::streams}"
       multi_arg_sep: ","
       nodes: 2
       walltime: 00:05:00
@@ -158,14 +158,14 @@ tasks:
       plugin: shell
       computer: localhost
       src: /TESTS_ROOTDIR/tests/cases/large/config/scripts/scripts/post_clean.sh
-      command: "post_clean.sh {PORT::postout} {PORT::streams} {PORT::icon_input}"
+      command: "bash post_clean.sh {PORT::postout} {PORT::streams} {PORT::icon_input}"
       nodes: 1
       walltime: 00:01:00
   - store_and_clean_2:
       plugin: shell
       computer: localhost
       src: /TESTS_ROOTDIR/tests/cases/large/config/scripts/scripts/post_clean.sh
-      command: "post_clean.sh --archive {PORT::archive} --clean {PORT::clean}"
+      command: "bash post_clean.sh --archive {PORT::archive} --clean {PORT::clean}"
       nodes: 1
       walltime: 00:01:00
 data:
