Enforce `ShellTask.src` to be relative path (#172)

--- a/tests/cases/large/config/config.yml
+++ b/tests/cases/large/config/config.yml
@@ -97,7 +97,7 @@ tasks:
   - extpar:
       plugin: shell  # no extpar plugin available yet
       computer: localhost
-      src: /TESTS_ROOTDIR/tests/cases/large/config/scripts/extpar
+      src: scripts/extpar
       command: "extpar --verbose --input {PORT::obs}"
       uenv:
         squashfs: path/to/squashfs
@@ -107,7 +107,7 @@ tasks:
   - preproc:
       plugin: shell
       computer: localhost
-      src: /TESTS_ROOTDIR/tests/cases/large/config/scripts/cleanup.sh
+      src: scripts/cleanup.sh
       command: "bash cleanup.sh -p {PORT::extpar} -e {PORT::era} {PORT::grid}"
       env_source_files: data/dummy_source_file.sh
       nodes: 4
@@ -136,7 +136,7 @@ tasks:
   - postproc_1:
       plugin: shell
       computer: localhost
-      src: /TESTS_ROOTDIR/tests/cases/large/config/scripts/main_script_ocn.sh
+      src: scripts/main_script_ocn.sh
       command: "bash main_script_ocn.sh {PORT::None}"
       nodes: 2
       walltime: 00:05:00
@@ -146,7 +146,6 @@ tasks:
   - postproc_2:
       plugin: shell
       computer: localhost
-      src: /TESTS_ROOTDIR/tests/cases/large/config/scripts/scripts/main_script_atm.sh
       command: "bash main_script_atm.sh --input {PORT::streams}"
       multi_arg_sep: ","
       nodes: 2
@@ -157,14 +156,14 @@ tasks:
   - store_and_clean_1:
       plugin: shell
       computer: localhost
-      src: /TESTS_ROOTDIR/tests/cases/large/config/scripts/scripts/post_clean.sh
+      src: scripts/post_clean.sh
       command: "bash post_clean.sh {PORT::postout} {PORT::streams} {PORT::icon_input}"
       nodes: 1
       walltime: 00:01:00
   - store_and_clean_2:
       plugin: shell
       computer: localhost
-      src: /TESTS_ROOTDIR/tests/cases/large/config/scripts/scripts/post_clean.sh
+      src: scripts/post_clean.sh
       command: "bash post_clean.sh --archive {PORT::archive} --clean {PORT::clean}"
       nodes: 1
       walltime: 00:01:00
