--- a/tests/cases/small-icon/config/config.yml
+++ b/tests/cases/small-icon/config/config.yml
@@ -56,23 +56,23 @@ data:
      - icon_grid_simple:
          type: file
          src: /TESTS_ROOTDIR/tests/cases/small-icon/config/ICON/icon_grid_simple.nc
-         computer: localhost
+         computer: localhost_ssh
      - ecrad_data:
          type: file
          src: /TESTS_ROOTDIR/tests/cases/small-icon/config/ICON/ecrad_data
-         computer: localhost
+         computer: localhost_ssh
      - ECHAM6_CldOptProps:
          type: file
          src: /TESTS_ROOTDIR/tests/cases/small-icon/config/ICON/ECHAM6_CldOptProps.nc
-         computer: localhost
+         computer: localhost_ssh
      - rrtmg_sw:
          type: file
          src: /TESTS_ROOTDIR/tests/cases/small-icon/config/ICON/rrtmg_sw.nc
-         computer: localhost
+         computer: localhost_ssh
      - dmin_wetgrowth_lookup:
          type: file
          src: /TESTS_ROOTDIR/tests/cases/small-icon/config/ICON/dmin_wetgrowth_lookup.nc
-         computer: localhost
+         computer: localhost_ssh
   generated:
      - finish:
          type: file
