Update supported python versions in package metadata (#138)
Add Python versions 3.10, 3.12, 3.13

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,10 @@ classifiers = [
   'Intended Audience :: Science/Research',
   'Operating System :: POSIX :: Linux',
   'Programming Language :: Python',
+  'Programming Language :: Python :: 3.10',
+  'Programming Language :: Python :: 3.11',
   'Programming Language :: Python :: 3.12',
+  'Programming Language :: Python :: 3.13',
   'Topic :: Scientific/Engineering',
   'Topic :: Scientific/Engineering :: Atmospheric Science',
   'License :: OSI Approved :: MIT License',
