--- a/ci/cscs.yml
+++ b/ci/cscs.yml
@@ -1,7 +1,18 @@
+---
+# Include external CI template from CSCS
 include:
-  - remote: 'https://gitlab.com/cscs-ci/recipes/-/raw/master/templates/v2/.ci-ext.yml'
+  - remote: "https://gitlab.com/cscs-ci/recipes/-/raw/master/templates/v2/.ci-ext.yml"
+
+# Defines the stages for the CI/CD pipeline
+# Jobs in earlier stages are run before jobs in later stages.
+stages:
+  - build
+
+variables:
+  TMPDIR: "/var/tmp"
 
 job:
+  stage: build
   extends: .f7t-controller
   script:
     - FIRECREST_URL=https://api.cscs.ch/cw/firecrest/v1
