--- a/ci/cscs.yml
+++ b/ci/cscs.yml
@@ -21,9 +21,10 @@ job:
     - apt-get update -y && apt-get install -y --no-install-recommends graphviz graphviz-dev rabbitmq-server
     - pip install --upgrade pip
     - pip install . 
+    - firecrest whoami
     - verdi presto --profile-name "cscs-ci"
-    - verdi computer setup --label santis-firecrest --hostname unused --transport firecrest --scheduler firecrest -n 
+    - verdi computer setup --label localhost_ssh --hostname unused --transport firecrest --scheduler firecrest -n 
     - verdi devel launch-add # hacky way to define localhost TODO do properly
-    - verdi computer configure firecrest localhost_ssh --url $FIRECREST_URL --token-uri https://auth.cscs.ch/auth/realms/firecrest-clients/protocol/openid-connect/token --client-id $FIRECREST_CLIENT_ID --client-secret $FIRECREST_CLIENT_SECRET --compute-resource $CLUSTER --temp-directory /tmp/sirocco --api-version 1.16.0 --small-file-size-mb 4096 # TODO rename localhost_ssh in config file to remote
+    - verdi computer configure firecrest localhost_ssh --url $FIRECREST_URL --token-uri https://auth.cscs.ch/auth/realms/firecrest-clients/protocol/openid-connect/token --client-id $FIRECREST_CLIENT_ID --client-secret $FIRECREST_CLIENT_SECRET --compute-resource $CLUSTER --temp-directory /tmp/sirocco --api-version 1.16.0 --small-file-size-mb 4096 # TODO rename localhost_ssh in config file to remote and pytest provdie a way to pass the remote
     - verdi computer test santis-firecrest
     - python ci/preparerun.py
