--- a/ci/cscs.yml
+++ b/ci/cscs.yml
@@ -23,8 +23,9 @@ job:
     - pip install . 
     - whoami
     - echo $SCRATCH
-    - ls /capstor/scratch/cscs/agoscins
     - firecrest --help
+    - firecrest ls /capstor/scratch/cscs/agoscins
+    - firecrest upload --help
     - verdi presto --profile-name "cscs-ci"
     - verdi computer setup --label localhost_ssh --hostname unused --transport firecrest --scheduler firecrest -n 
     - verdi devel launch-add # hacky way to define localhost TODO do properly
