--- a/ci/cscs.yml
+++ b/ci/cscs.yml
@@ -28,13 +28,14 @@ job:
     - firecrest --help
     - firecrest --help
     - firecrest upload --help
-    - firecrest -s $FIRECREST_SYSTEM id
+    - fircrest id --help
+    - firecrest --system $FIRECREST_SYSTEM id
     - firecrest -s $FIRECREST_SYSTEM filesystem
     - firecrest -s $FIRECREST_SYSTEM get-partitions
     - firecrest -s $FIRECREST_SYSTEM get-reservations
-    - firecrest ls /
-    - firecrest ls /capstor
-    - firecrest ls /capstor/scratch
+    - firecrest -s $FIRECREST_SYSTEM ls /
+    - firecrest -s $FIRECREST_SYSTEM ls /capstor
+    - firecrest -s $FIRECREST_SYSTEM ls /capstor/scratch
     - verdi presto --profile-name "cscs-ci"
     - verdi computer setup --label localhost_ssh --hostname unused --transport firecrest --scheduler firecrest -n 
     - verdi devel launch-add # hacky way to define localhost TODO do properly
