--- a/ci/cscs.yml
+++ b/ci/cscs.yml
@@ -29,13 +29,13 @@ job:
     - firecrest --help
     - firecrest upload --help
     - fircrest id --help
-    - firecrest --system $FIRECREST_SYSTEM id
-    - firecrest -s $FIRECREST_SYSTEM filesystem
-    - firecrest -s $FIRECREST_SYSTEM get-partitions
-    - firecrest -s $FIRECREST_SYSTEM get-reservations
-    - firecrest -s $FIRECREST_SYSTEM ls /
-    - firecrest -s $FIRECREST_SYSTEM ls /capstor
-    - firecrest -s $FIRECREST_SYSTEM ls /capstor/scratch
+    - firecrest id -s $FIRECREST_SYSTEM
+    - firecrest filesystem -s $FIRECREST_SYSTEM
+    - firecrest get-partitions -s $FIRECREST_SYSTEM
+    - firecrest get-reservations -s $FIRECREST_SYSTEM
+    - firecrest ls -s $FIRECREST_SYSTEM /
+    - firecrest ls -s $FIRECREST_SYSTEM /capstor
+    - firecrest ls -s $FIRECREST_SYSTEM /capstor/scratch
     - verdi presto --profile-name "cscs-ci"
     - verdi computer setup --label localhost_ssh --hostname unused --transport firecrest --scheduler firecrest -n 
     - verdi devel launch-add # hacky way to define localhost TODO do properly
