--- a/ci/cscs.yml
+++ b/ci/cscs.yml
@@ -18,8 +18,7 @@ job:
     - FIRECREST_URL=https://api.cscs.ch/cw/firecrest/v1
     - FIRECREST_SYSTEM=santis
     - FIRECREST_API_VERSION=1.16.0
-    - firecrest rm --help
-    - firecrest rm /capstor/scratch/cscs/ricoh/sirocco-tests --system $FIRECREST_SYSTEM
+    - firecrest rm /capstor/scratch/cscs/ricoh/sirocco-tests --force --system $FIRECREST_SYSTEM
 
     - firecrest mkdir /capstor/scratch/cscs/ricoh/sirocco-tests
     - firecrest upload tests/cases/small-icon/config/config.yml /capstor/scratch/cscs/ricoh/sirocco-tests config.yml
