--- a/ci/cscs.yml
+++ b/ci/cscs.yml
@@ -21,7 +21,7 @@ job:
     - firecrest rm /capstor/scratch/cscs/ricoh/sirocco-tests --force --system $FIRECREST_SYSTEM || true
 
     - firecrest mkdir /capstor/scratch/cscs/ricoh/sirocco-tests --system $FIRECREST_SYSTEM
-    - firecrest upload tests/cases/small-icon/config/config.yml /capstor/scratch/cscs/ricoh/sirocco-tests config.yml
+    - firecrest upload tests/cases/small-icon/config/config.yml /capstor/scratch/cscs/ricoh/sirocco-tests config.yml --system $FIRECREST_SYSTEM
     - firecrest filesystems 
     - firecrest filesystems -s santis
     - firecrest filesystems --system $FIRECREST_SYSTEM
