--- a/tests/cases/small-icon/config/config.yml
+++ b/tests/cases/small-icon/config/config.yml
@@ -31,13 +31,14 @@ cycles:
                   port: finish_status
               - restart:
                   port: latest_restart_file
-  - lastly:
-      tasks:
-        - cleanup:
-            wait_on:
-              - icon:
-                  target_cycle:
-                    date: 2026-05-01T00:00
+  # TODO bring back once mpi option is in shell task
+  #- lastly:
+  #    tasks:
+  #      - cleanup:
+  #          wait_on:
+  #            - icon:
+  #                target_cycle:
+  #                  date: 2026-05-01T00:00
 tasks:
   - icon:
       plugin: icon
@@ -46,11 +47,22 @@ tasks:
       namelists:
         - ./ICON/icon_master.namelist
         - ./ICON/model.namelist
+      walltime: 00:05:00
+      nodes: 1
+      ntasks_per_node: 1
+      mem_per_node_mb: 1024
+      cpus_per_task: 1
   - cleanup:
       plugin: shell
       computer: localhost
       src: scripts/cleanup.py
       command: "python cleanup.py"
+      # TODO
+      #walltime: 00:05:00
+      #nodes: 1
+      #ntasks_per_node: 1
+      #mem_per_node_mb: 1024
+      #cpus_per_task: 1
 data:
   available:
      - icon_grid_simple:
