rename localhost -> remote

--- a/tests/cases/small-icon/config/config.yml
+++ b/tests/cases/small-icon/config/config.yml
@@ -54,7 +54,7 @@ tasks:
       cpus_per_task: 1
   - cleanup:
       plugin: shell
-      computer: localhost
+      computer: localhost 
       src: scripts/cleanup.py
       command: "python cleanup.py"
       # TODO
@@ -68,23 +68,23 @@ data:
      - icon_grid_simple:
          type: file
          src: /DATA_REMOTEDIR/tests/cases/small-icon/config/ICON/icon_grid_simple.nc
-         computer: localhost_ssh
+         computer: remote
      - ecrad_data:
          type: file
          src: /DATA_REMOTEDIR/tests/cases/small-icon/config/ICON/ecrad_data
-         computer: localhost_ssh
+         computer: remote
      - ECHAM6_CldOptProps:
          type: file
          src: /DATA_REMOTEDIR/tests/cases/small-icon/config/ICON/ECHAM6_CldOptProps.nc
-         computer: localhost_ssh
+         computer: remote
      - rrtmg_sw:
          type: file
          src: /DATA_REMOTEDIR/tests/cases/small-icon/config/ICON/rrtmg_sw.nc
-         computer: localhost_ssh
+         computer: remote 
      - dmin_wetgrowth_lookup:
          type: file
          src: /DATA_REMOTEDIR/tests/cases/small-icon/config/ICON/dmin_wetgrowth_lookup.nc
-         computer: localhost_ssh
+         computer: remote
   generated:
      - finish:
          type: file
